[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/AsteroidSpawn.gd" type="Script" id=1]
[ext_resource path="res://Levels/background.png" type="Texture" id=2]
[ext_resource path="res://Levels/background.gd" type="Script" id=3]
[ext_resource path="res://Levels/Earth.png" type="Texture" id=4]
[ext_resource path="res://Levels/Earth.gd" type="Script" id=5]
[ext_resource path="res://Levels/Space.gd" type="Script" id=6]
[ext_resource path="res://Levels/clouds.png" type="Texture" id=7]
[ext_resource path="res://Levels/Clouds.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.5079, 41.5931 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 77.5426, 91.6628 )

[node name="Space" type="Node2D"]
script = ExtResource( 6 )

[node name="AsteroidSpawn" type="Node2D" parent="."]
position = Vector2( 80, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]
position = Vector2( 80, 300 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="EarthArea" type="Area2D" parent="background"]
position = Vector2( 0, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="Earth" type="Sprite" parent="background/EarthArea"]
position = Vector2( 0, -22 )
texture = ExtResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/EarthArea"]
shape = SubResource( 1 )

[node name="CloudsArea" type="Area2D" parent="background"]
position = Vector2( 0, 200 )
__meta__ = {
"_edit_lock_": true
}

[node name="Clouds" type="Sprite" parent="background/CloudsArea"]
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/CloudsArea"]
shape = SubResource( 2 )
[connection signal="end" from="background" to="." method="_on_background_end"]
[connection signal="area_entered" from="background/EarthArea" to="background/EarthArea/Earth" method="_on_EarthArea_area_entered"]
[connection signal="area_entered" from="background/CloudsArea" to="background/CloudsArea/Clouds" method="_on_CloudsArea_area_entered"]
